--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,19 +1,19 @@
 {
-  "name": "MelBal App",
-  "short_name": "MelBal",
-  "theme_color": "#FFFFFF",
-  "background_color": "#FFFFFF",
+  "name": "Melbal App",
+  "short_name": "Melbal",
+  "description": "Gestion Réservations Melkior - Bal'tazar",
   "start_url": "/",
   "display": "standalone",
-  "orientation": "portrait",
+  "background_color": "#09090B",
+  "theme_color": "#000000",
   "icons": [
     {
-      "src": "/android/android-launchericon-192-192.png",
+      "src": "android/android-lauchericon-192-192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/android/android-launchericon-512-512.png",
+      "src": "android/android-lauchericon-512-512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
