--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "date-fns-tz": "^3.1.3",
+    "framer-motion": "^11.15.0",
     "geist": "^1.2.1",
     "js-cookie": "^3.0.5",
     "jspdf": "^2.5.2",
@@ -31,6 +32,7 @@
     "react": "18.2.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "18.2.0",
+    "react-toastify": "^10.0.6",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.3.3",
